<?xml version="1.0" encoding="utf-8"?>
<!--
    Color Time Pass
    Copyright (C) 2016 Appgramming. All rights reserved.
    http://www.appgramming.com
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_toggle_details"
        android:icon="@drawable/ic_timelapse_black_24dp"
        android:onClick="actionToggleDetails"
        android:showAsAction="ifRoom"
        android:title="@string/action_details"/>
    <item
        android:id="@+id/action_fullscreen"
        android:icon="@drawable/ic_fullscreen_black_24dp"
        android:onClick="actionFullScreen"
        android:showAsAction="ifRoom"
        android:title="@string/action_fullscreen"/>
    <item
        android:onClick="actionTimeTravel"
        android:showAsAction="never"
        android:title="@string/action_time_travel"/>
    <item
        android:onClick="actionSettings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:onClick="actionRate"
        android:showAsAction="never"
        android:title="@string/action_rate"/>
    <item
        android:onClick="actionHelp"
        android:showAsAction="never"
        android:title="@string/action_help"/>
</menu>